// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`multiple-entries build should create valid app 1`] = `
Object {
  "content": "<!DOCTYPE html><html><head>
    <meta charset=\\"UTF-8\\">
    <title>hello-world</title>
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\">
    <script>
      window.APP_CONFIG = {\\"site\\":\\"au\\",\\"environment\\":\\"production\\"};
    </script>
    <link rel=\\"stylesheet\\" type=\\"text/css\\" href=\\"http://localhost:4001/home-62bf94bf0fd2ba3c2aa2.css\\">
  </head>
  <body>
    <div id=\\"app\\"><h1 class=\\"_1QX0Hyt\\" data-reactroot=\\"\\">Welcome to the Home page - <!-- -->au</h1></div>
    <script type=\\"text/javascript\\" src=\\"http://localhost:4001/runtime-401aa21f1fa0a3f1a06a.js\\"></script>
<script type=\\"text/javascript\\" src=\\"http://localhost:4001/vendors~details~home-51928ef7fbf843e82b23.js\\"></script>
<script type=\\"text/javascript\\" src=\\"http://localhost:4001/home-ae8d867601646498c48e.js\\"></script>
  
</body></html>",
  "errors": Array [],
  "sourceHtml": "<!DOCTYPE html>
<html>
  <head>
    <meta charset=\\"UTF-8\\">
    <title>hello-world</title>
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\">
    <script>
      window.APP_CONFIG = {\\"site\\":\\"au\\",\\"environment\\":\\"production\\"};
    </script>
    <link rel=\\"stylesheet\\" type=\\"text/css\\" href=\\"http://localhost:4001/home-62bf94bf0fd2ba3c2aa2.css\\" />
  </head>
  <body>
    <div id=\\"app\\"><h1 class=\\"_1QX0Hyt\\" data-reactroot=\\"\\">Welcome to the Home page - <!-- -->au</h1></div>
    <script type=\\"text/javascript\\" src=\\"http://localhost:4001/runtime-401aa21f1fa0a3f1a06a.js\\"></script>
<script type=\\"text/javascript\\" src=\\"http://localhost:4001/vendors~details~home-51928ef7fbf843e82b23.js\\"></script>
<script type=\\"text/javascript\\" src=\\"http://localhost:4001/home-ae8d867601646498c48e.js\\"></script>
  </body>
</html>",
  "warnings": Array [],
}
`;

exports[`multiple-entries build should generate the expected files 1`] = `
Object {
  "4-04990a1776692a284b46.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "details-6c8d7afb3c7b045262fd.css": "._91MnZhe{color:blue}
",
  "details-c05fd34f9f1a30e65bab.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "home-62bf94bf0fd2ba3c2aa2.css": "._1QX0Hyt{color:red}
",
  "home-ae8d867601646498c48e.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "production/au/details/:id/index.html": "<!DOCTYPE html>
<html>
  <head>
    <meta charset=\\"UTF-8\\">
    <title>hello-world</title>
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\">
    <script>
      window.APP_CONFIG = {\\"site\\":\\"au\\",\\"environment\\":\\"production\\"};
    </script>
    <link rel=\\"stylesheet\\" type=\\"text/css\\" href=\\"http://localhost:4001/details-6c8d7afb3c7b045262fd.css\\" />
  </head>
  <body>
    <div id=\\"app\\"><h1 class=\\"_91MnZhe\\" data-reactroot=\\"\\">Welcome to the Details page - <!-- -->au<!-- -->loading...</h1></div>
    <script type=\\"text/javascript\\" src=\\"http://localhost:4001/runtime-401aa21f1fa0a3f1a06a.js\\"></script>
<script type=\\"text/javascript\\" src=\\"http://localhost:4001/vendors~details~home-51928ef7fbf843e82b23.js\\"></script>
<script type=\\"text/javascript\\" src=\\"http://localhost:4001/details-c05fd34f9f1a30e65bab.js\\"></script>
  </body>
</html>",
  "production/au/index.html": "<!DOCTYPE html>
<html>
  <head>
    <meta charset=\\"UTF-8\\">
    <title>hello-world</title>
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\">
    <script>
      window.APP_CONFIG = {\\"site\\":\\"au\\",\\"environment\\":\\"production\\"};
    </script>
    <link rel=\\"stylesheet\\" type=\\"text/css\\" href=\\"http://localhost:4001/home-62bf94bf0fd2ba3c2aa2.css\\" />
  </head>
  <body>
    <div id=\\"app\\"><h1 class=\\"_1QX0Hyt\\" data-reactroot=\\"\\">Welcome to the Home page - <!-- -->au</h1></div>
    <script type=\\"text/javascript\\" src=\\"http://localhost:4001/runtime-401aa21f1fa0a3f1a06a.js\\"></script>
<script type=\\"text/javascript\\" src=\\"http://localhost:4001/vendors~details~home-51928ef7fbf843e82b23.js\\"></script>
<script type=\\"text/javascript\\" src=\\"http://localhost:4001/home-ae8d867601646498c48e.js\\"></script>
  </body>
</html>",
  "production/nz/details/:id/index.html": "<!DOCTYPE html>
<html>
  <head>
    <meta charset=\\"UTF-8\\">
    <title>hello-world</title>
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\">
    <script>
      window.APP_CONFIG = {\\"site\\":\\"nz\\",\\"environment\\":\\"production\\"};
    </script>
    <link rel=\\"stylesheet\\" type=\\"text/css\\" href=\\"http://localhost:4001/details-6c8d7afb3c7b045262fd.css\\" />
  </head>
  <body>
    <div id=\\"app\\"><h1 class=\\"_91MnZhe\\" data-reactroot=\\"\\">Welcome to the Details page - <!-- -->nz<!-- -->loading...</h1></div>
    <script type=\\"text/javascript\\" src=\\"http://localhost:4001/runtime-401aa21f1fa0a3f1a06a.js\\"></script>
<script type=\\"text/javascript\\" src=\\"http://localhost:4001/vendors~details~home-51928ef7fbf843e82b23.js\\"></script>
<script type=\\"text/javascript\\" src=\\"http://localhost:4001/details-c05fd34f9f1a30e65bab.js\\"></script>
  </body>
</html>",
  "production/nz/index.html": "<!DOCTYPE html>
<html>
  <head>
    <meta charset=\\"UTF-8\\">
    <title>hello-world</title>
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\">
    <script>
      window.APP_CONFIG = {\\"site\\":\\"nz\\",\\"environment\\":\\"production\\"};
    </script>
    <link rel=\\"stylesheet\\" type=\\"text/css\\" href=\\"http://localhost:4001/home-62bf94bf0fd2ba3c2aa2.css\\" />
  </head>
  <body>
    <div id=\\"app\\"><h1 class=\\"_1QX0Hyt\\" data-reactroot=\\"\\">Welcome to the Home page - <!-- -->nz</h1></div>
    <script type=\\"text/javascript\\" src=\\"http://localhost:4001/runtime-401aa21f1fa0a3f1a06a.js\\"></script>
<script type=\\"text/javascript\\" src=\\"http://localhost:4001/vendors~details~home-51928ef7fbf843e82b23.js\\"></script>
<script type=\\"text/javascript\\" src=\\"http://localhost:4001/home-ae8d867601646498c48e.js\\"></script>
  </body>
</html>",
  "runtime-401aa21f1fa0a3f1a06a.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "vendors~details~home-51928ef7fbf843e82b23.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
}
`;

exports[`multiple-entries start should render details page correctly 1`] = `
Object {
  "content": "<!DOCTYPE html><html><head>
    <meta charset=\\"UTF-8\\">
    <title>hello-world</title>
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\">
    <script>
      window.APP_CONFIG = {\\"site\\":\\"au\\",\\"environment\\":\\"production\\"};
    </script>
    <link rel=\\"stylesheet\\" type=\\"text/css\\" href=\\"/details.css\\">
  <script charset=\\"utf-8\\" src=\\"/0.js\\"></script></head>
  <body>
    <div id=\\"app\\"><h1 class=\\"Details__root___91MnZhe\\" data-reactroot=\\"\\">Welcome to the Details page - <!-- -->au<!-- -->ID: 123<span>Some special async content</span></h1></div>
    <script type=\\"text/javascript\\" src=\\"/runtime.js\\"></script>
<script type=\\"text/javascript\\" src=\\"/vendors~details~home.js\\"></script>
<script type=\\"text/javascript\\" src=\\"/details.js\\"></script>
  
</body></html>",
  "errors": Array [],
  "sourceHtml": "<!DOCTYPE html>
<html>
  <head>
    <meta charset=\\"UTF-8\\">
    <title>hello-world</title>
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\">
    <script>
      window.APP_CONFIG = {\\"site\\":\\"au\\",\\"environment\\":\\"production\\"};
    </script>
    <link rel=\\"stylesheet\\" type=\\"text/css\\" href=\\"/details.css\\" />
  </head>
  <body>
    <div id=\\"app\\"><h1 class=\\"Details__root___91MnZhe\\" data-reactroot=\\"\\">Welcome to the Details page - <!-- -->au<!-- -->loading...</h1></div>
    <script type=\\"text/javascript\\" src=\\"/runtime.js\\"></script>
<script type=\\"text/javascript\\" src=\\"/vendors~details~home.js\\"></script>
<script type=\\"text/javascript\\" src=\\"/details.js\\"></script>
  </body>
</html>",
  "warnings": Array [],
}
`;

exports[`multiple-entries start should render home page correctly 1`] = `
Object {
  "content": "<!DOCTYPE html><html><head>
    <meta charset=\\"UTF-8\\">
    <title>hello-world</title>
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\">
    <script>
      window.APP_CONFIG = {\\"site\\":\\"au\\",\\"environment\\":\\"production\\"};
    </script>
    <link rel=\\"stylesheet\\" type=\\"text/css\\" href=\\"/home.css\\">
  </head>
  <body>
    <div id=\\"app\\"><h1 class=\\"Home__root___1QX0Hyt\\" data-reactroot=\\"\\">Welcome to the Home page - <!-- -->au</h1></div>
    <script type=\\"text/javascript\\" src=\\"/runtime.js\\"></script>
<script type=\\"text/javascript\\" src=\\"/vendors~details~home.js\\"></script>
<script type=\\"text/javascript\\" src=\\"/home.js\\"></script>
  
</body></html>",
  "errors": Array [],
  "sourceHtml": "<!DOCTYPE html>
<html>
  <head>
    <meta charset=\\"UTF-8\\">
    <title>hello-world</title>
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\">
    <script>
      window.APP_CONFIG = {\\"site\\":\\"au\\",\\"environment\\":\\"production\\"};
    </script>
    <link rel=\\"stylesheet\\" type=\\"text/css\\" href=\\"/home.css\\" />
  </head>
  <body>
    <div id=\\"app\\"><h1 class=\\"Home__root___1QX0Hyt\\" data-reactroot=\\"\\">Welcome to the Home page - <!-- -->au</h1></div>
    <script type=\\"text/javascript\\" src=\\"/runtime.js\\"></script>
<script type=\\"text/javascript\\" src=\\"/vendors~details~home.js\\"></script>
<script type=\\"text/javascript\\" src=\\"/home.js\\"></script>
  </body>
</html>",
  "warnings": Array [],
}
`;
